--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^9.25.1",
